--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <nav style=" display: flex; text-align:start; margin: 20px; font-size: 18px; border: solid transparent ; ">
         <img id="home" style="width: 25px; height: 25px; margin: 2px 5px 0px 0px ; border-radius: 5px; " src="E-learning logo, vector stock vector_ Illustration of design - 97659237.jpg" alt="">
-        <a style="text-decoration: none; color: black; margin: 5px 8px; "  href="#home">Home</a>  
+        <a style="text-decoration: none; color: black; margin: 5px 8px; "  href="index.html">Home</a>  
         <a style="text-decoration: none; color: black; margin: 5px 8px; "  href="courses.html">Courses</a> 
         <a style="text-decoration: none; color: black; margin: 5px 8px; " href="contact.html">Contact</a> 
         <a style="text-decoration: none; color: black; margin: 5px 8px; " href="pricing.html">Pricing</a>
